tests/coverage/misc/fail/negative/numeric_literals/006_invalid_binary_digit.js
// Expected error: binary literals may only contain digits 0 and 1.
const value = 0b2;
